# magic

./: .gitignore  mm_labels.txt  pyproject.toml
magic/: magic.py  outputs.py
